@@ -2,13 +2,12 @@ package io.kestra.plugin.jira.issues;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
+import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.TimeoutException;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
-import com.google.common.collect.ImmutableMap;
 
 import io.kestra.core.junit.annotations.KestraTest;
 import io.kestra.core.models.executions.Execution;
@@ -56,9 +55,9 @@ class CreateCommentTest {
             "io.kestra.tests",
             "comment-jira",
             null,
-            (f, e) -> ImmutableMap.of("url", embeddedServer.getURI().toString())
+            (f, e) -> Map.of("url", embeddedServer.getURI().toString())
         );
 
-        assertThat(execution.getTaskRunList(), hasSize(3));
+        assertThat(execution.getTaskRunList(), hasSize(1));
     }
 }
